--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -8,7 +8,7 @@ h1 {
     font-weight:400;
     letter-spacing: .2rem;
     color:#505050;
-    font-size: 5rem;
+    font-size: 12vh;
     position: relative;
     top:.25em;
 }
